Bug 73046 - missing RuntimeEnabled checks cause crash for <track>
Summary: missing RuntimeEnabled checks cause crash for <track>
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Media (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Anna Cavender
URL:
Keywords:
Depends on:
Blocks: 43668
  Show dependency treegraph
 
Reported: 2011-11-23 13:26 PST by Anna Cavender
Modified: 2011-11-27 13:14 PST (History)
1 user (show)

See Also:


Attachments
Patch (1.49 KB, patch)
2011-11-23 15:16 PST, Anna Cavender
eric.carlson: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Anna Cavender 2011-11-23 13:26:52 PST
HTMLTrackElement is missing some RuntimeEnabled feature checks and we're seeing some crashes when using the <track> tag without --enable-video-track
Comment 1 Anna Cavender 2011-11-23 15:16:06 PST
Created attachment 116439 [details]
Patch
Comment 2 Anna Cavender 2011-11-27 13:14:36 PST
Committed r101210: <http://trac.webkit.org/changeset/101210>