Don't allow attribute changes on <track> if feature is not enabled. https://bugs.webkit.org/show_bug.cgi?id=73046

Reviewed by Eric Carlson.

No new tests. This fixes a problem when --enable-video-track is not used,
but the tests use this flag.

* html/HTMLTrackElement.cpp:
(WebCore::HTMLTrackElement::attributeChanged):

Canonical link: https://commits.webkit.org/89691@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@101210 268f45cc-cd09-0410-ab3c-d52691b4dbfc